--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -168,7 +168,7 @@
                                 class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                                 <a href="#">
                                     <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg"
-                                        src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/bonnie-green.png"
+                                        src="./img/1gem.png"
                                         alt="Bonnie Avatar">
                                 </a>
                                 <div class="p-5">
@@ -222,7 +222,7 @@
                                 class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                                 <a href="#">
                                     <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg"
-                                        src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/jese-leos.png"
+                                        src="./img/2gem.png"
                                         alt="Jese Avatar">
                                 </a>
                                 <div class="p-5">
@@ -276,7 +276,7 @@
                                 class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                                 <a href="#">
                                     <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg"
-                                        src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/michael-gouch.png"
+                                        src="./img/3gem.png"
                                         alt="Michael Avatar">
                                 </a>
                                 <div class="p-5">
@@ -329,7 +329,7 @@
                                 class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                                 <a href="#">
                                     <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg"
-                                        src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/sofia-mcguire.png"
+                                        src="./img/4gem.png"
                                         alt="Sofia Avatar">
                                 </a>
                                 <div class="p-5">
