--- a/views/user/gallery.ejs
+++ b/views/user/gallery.ejs
@@ -2,7 +2,7 @@
     <div class=" max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6 ">
             <div class="mx-auto max-w-screen-sm text-center mb-8 lg:mb-16">
-                <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Our Team</h2>
+                <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Our Gallery</h2>
                 <p class="font-light text-gray-500 lg:mb-16 sm:text-xl dark:text-gray-400">Explore the whole
                     collection of open-source web components and elements built with the utility classes from
                     Tailwind</p>
@@ -12,7 +12,7 @@
                     class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                     <a href="#">
                         <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg"
-                            src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/bonnie-green.png"
+                            src="./img/1gem.png"
                             alt="Bonnie Avatar">
                     </a>
                     <div class="p-5">
@@ -22,7 +22,7 @@
                         <span class="text-gray-500 dark:text-gray-400">CEO & Web Developer</span>
                         <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Bonnie drives the technical
                             strategy of the flowbite platform and brand.</p>
-                        <ul class="flex space-x-4 sm:mt-0">
+                        <!-- <ul class="flex space-x-4 sm:mt-0">
                             <li>
                                 <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
                                     <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
@@ -58,14 +58,14 @@
                                     </svg>
                                 </a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
                 <div
                     class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                     <a href="#">
                         <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg"
-                            src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/jese-leos.png"
+                            src="./img/2gem.png"
                             alt="Jese Avatar">
                     </a>
                     <div class="p-5">
@@ -75,7 +75,7 @@
                         <span class="text-gray-500 dark:text-gray-400">CTO</span>
                         <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Jese drives the technical
                             strategy of the flowbite platform and brand.</p>
-                        <ul class="flex space-x-4 sm:mt-0">
+                        <!-- <ul class="flex space-x-4 sm:mt-0">
                             <li>
                                 <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
                                     <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
@@ -111,14 +111,14 @@
                                     </svg>
                                 </a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
                 <div
                     class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                     <a href="#">
                         <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg"
-                            src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/michael-gouch.png"
+                            src="./img/3gem.png"
                             alt="Michael Avatar">
                     </a>
                     <div class="p-5">
@@ -128,7 +128,7 @@
                         <span class="text-gray-500 dark:text-gray-400">Senior Front-end Developer</span>
                         <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Michael drives the
                             technical strategy of the flowbite platform and brand.</p>
-                        <ul class="flex space-x-4 sm:mt-0">
+                        <!-- <ul class="flex space-x-4 sm:mt-0">
                             <li>
                                 <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
                                     <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
@@ -164,14 +164,14 @@
                                     </svg>
                                 </a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
                 <div
                     class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                     <a href="#">
                         <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg"
-                            src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/sofia-mcguire.png"
+                            src="./img/4gem.png"
                             alt="Sofia Avatar">
                     </a>
                     <div class="p-5">
@@ -181,7 +181,7 @@
                         <span class="text-gray-500 dark:text-gray-400">Marketing & Sale</span>
                         <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Lana drives the technical
                             strategy of the flowbite platform and brand.</p>
-                        <ul class="flex space-x-4 sm:mt-0">
+                        <!-- <ul class="flex space-x-4 sm:mt-0">
                             <li>
                                 <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
                                     <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
@@ -217,7 +217,7 @@
                                     </svg>
                                 </a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
             </div>
