--- a/views/admin/admin_add_report.ejs
+++ b/views/admin/admin_add_report.ejs
@@ -37,11 +37,10 @@
                         <div class="w-full md:w-auto flex flex-col md:flex-row space-y-2 md:space-y-0 items-stretch md:items-center justify-end md:space-x-3 relative">
                             <label for="countries" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Category</label>
                             <select id="countries" name="category" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-                                <option selected>Choose a country</option>
-                                <option value="US">United States</option>
-                                <option value="CA">Canada</option>
-                                <option value="FR">France</option>
-                                <option value="DE">Germany</option>
+                                <option selected>Choose a category</option>
+                                <option value="US">Diamond</option>
+                                <option value="CA">Gems</option>
+                                
                             </select>
                         </div>
 
