--- a/views/user/footer.ejs
+++ b/views/user/footer.ejs
@@ -15,7 +15,7 @@
               
               <div class="text-center md:text-left ml-2">
                 <h3 class="text-lg font-semibold text-gray-700 dark:text-gray-300">Address</h3>
-                <p class="text-gray-700 dark:text-gray-300">Near Shitala Mata Mandir, Hindi Bazar Gorakhpur (U.P)</p>
+                <p class="text-gray-700 dark:text-gray-300">Building Number 145, Second floor, No. S-1 to S-4, Katra mashroo, Dariba Kalan, Chandni chowk, Central Delhi, Delhi 110006.</p>
               </div>
             </div>
           </div>
@@ -30,7 +30,7 @@
               
               <div class="text-center md:text-left ml-2">
                 <h3 class="text-lg font-semibold text-gray-700 dark:text-gray-300">Call Us On</h3>
-                <p class="text-gray-700 dark:text-gray-300">Mob: <a href="tel:+917526026225">7526026225</a>, <a href="tel:+917945838888">9794583888</a></p>
+                <p class="text-gray-700  dark:text-gray-300"><span class="text-gray-700  dark:text-gray-300 text-lg font-medium">Office: </span><a href="#" >011-47048647</a><span class="text-gray-700  dark:text-gray-300 text-lg font-medium"> Inquiry:  </span><a href="#">+91-7678337365</a><span class="text-gray-700  dark:text-gray-300 text-lg font-medium"> Laboratory:</span><a href="#">+91-8810290039</a></p>
               </div>
             </div>
           </div>
@@ -46,7 +46,7 @@
               
               <div class="text-center md:text-left ml-2">
                 <h3 class="text-lg font-semibold text-gray-700 dark:text-gray-300">Email Us</h3>
-                <p class="text-gray-700 dark:text-gray-300">Email: <a href="mailto:Arunalpine@gmail.com">Arunalpine@gmail.com</a></p>
+                <p class="text-gray-700 dark:text-gray-300"><span class="text-gray-700  dark:text-gray-300 text-lg font-medium"> Email: </span><a href="mailto:uday.s.dey@gmail.com">uday.s.dey@gmail.com</a></p>
               </div>
             </div>
           </div>
@@ -123,7 +123,7 @@
       <hr class="my-6 border-gray-900 sm:mx-auto lg:my-8 dark:border-white" />
       <div class="sm:flex sm:items-center sm:justify-between">
         <span class="text-sm text-gray-500 sm:text-center dark:text-gray-200">© 2024 IGL &#8739;<a href="#"
-            class="hover:underline"></a> Developed&#10084;by <span class="text-gray-800">WebZono I.T Services.</span>
+            class="hover:underline"></a> Developed&#10084;by <span class="text-gray-800 dark:text-gray-200">WebZono I.T Services.</span>
         </span>
         <div class="mt-4 flex sm:mt-0 sm:justify-center">
           <a href="#" class="text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-white">
