--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -21,31 +21,31 @@
                         <div class="relative  h-56 overflow-hidden rounded-lg md:h-96">
                             <!-- Item 1 -->
                             <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                                <img src="./img/2.jpg"
+                                <img src="./img/igl1.jpg"
                                     class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
                                     alt="...">
                             </div>
                             <!-- Item 2 -->
                             <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                                <img src="./img/3.jpg"
+                                <img src="./img/igl2.JPG"
                                     class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
                                     alt="...">
                             </div>
                             <!-- Item 3 -->
                             <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                                <img src="./img/1.jpg"
+                                <img src="./img/igl3.JPG"
                                     class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
                                     alt="...">
                             </div>
                             <!-- Item 4 -->
                             <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                                <img src="./img/2.jpg"
+                                <img src="./img/igl4.jpg"
                                     class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
                                     alt="...">
                             </div>
                             <!-- Item 5 -->
                             <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                                <img src="./img/1.jpg"
+                                <img src="./img/igl5.jpg"
                                     class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
                                     alt="...">
                             </div>
@@ -90,10 +90,7 @@
                             <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">About
                                 Us
                             </h2>
-                            <p class="text-gray-500 sm:text-xl dark:text-gray-400">Here at Flowbite we focus on markets
-                                where
-                                technology, innovation, and capital can unlock long-term value and drive economic
-                                growth.</p>
+                            <p class="text-gray-500 sm:text-xl dark:text-gray-400">Welcome to the Institute of Gemology and Laboratory, where expertise meets excellence in diamonds, gemstones, and diamond jewelry.</p>
                         </div>
                         <div class="space-y-8 md:grid md:grid-cols-2 lg:grid-cols-3 md:gap-12 md:space-y-0">
                             <div>
@@ -106,11 +103,8 @@
                                             clip-rule="evenodd"></path>
                                     </svg>
                                 </div>
-                                <h3 class="mb-2 text-xl font-bold dark:text-white">Marketing</h3>
-                                <p class="text-gray-500 dark:text-gray-400">Plan it, create it, launch it. Collaborate
-                                    seamlessly with all the organization and hit your marketing goals every month with
-                                    our
-                                    marketing plan.</p>
+                                <h3 class="mb-2 text-xl font-bold dark:text-white">Gemology</h3>
+                                <p class="text-gray-500 dark:text-gray-400">At the Institute of Gemology and Laboratory, we take pride in our mastery of diamonds, gemstones, and diamond jewelry. With a team of seasoned gemologists and jewelry experts, we offer comprehensive evaluations and certifications for a wide range of precious stones and diamond jewelry pieces.</p>
                             </div>
                             <div>
                                 <div
@@ -122,9 +116,8 @@
                                         </path>
                                     </svg>
                                 </div>
-                                <h3 class="mb-2 text-xl font-bold dark:text-white">Legal</h3>
-                                <p class="text-gray-500 dark:text-gray-400">Protect your organization, devices and stay
-                                    compliant with our structured workflows and custom permissions made for you.</p>
+                                <h3 class="mb-2 text-xl font-bold dark:text-white">Expertise</h3>
+                                <p class="text-gray-500 dark:text-gray-400">Diamonds are our specialty, and our expert gemologists bring years of experience and a keen eye for detail to every assessment. Whether you're interested in determining the quality and authenticity of a single diamond or need a comprehensive evaluation of a diamond jewelry collection, you can trust us to deliver accurate, reliable results with professionalism and integrity.</p>
                             </div>
                             <div>
                                 <div
@@ -139,10 +132,8 @@
                                         </path>
                                     </svg>
                                 </div>
-                                <h3 class="mb-2 text-xl font-bold dark:text-white">Business Automation</h3>
-                                <p class="text-gray-500 dark:text-gray-400">Auto-assign tasks, send Slack messages, and
-                                    much
-                                    more. Now power up with hundreds of new templates to help you get started.</p>
+                                <h3 class="mb-2 text-xl font-bold dark:text-white">Gemstones</h3>
+                                <p class="text-gray-500 dark:text-gray-400">In addition to diamonds, we are also well-versed in the evaluation of various gemstones, including rubies, sapphires, emeralds, and more. Our expertise extends beyond diamonds to encompass the unique characteristics and value factors of each gemstone, ensuring that you receive precise and informative evaluations tailored to your specific needs.</p>
                             </div>
 
                         </div>
@@ -156,10 +147,7 @@
                         <div class="mx-auto max-w-screen-sm text-center mb-8 lg:mb-16">
                             <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Our
                                 Gallery</h2>
-                            <p class="font-light text-gray-500 lg:mb-16 sm:text-xl dark:text-gray-400">Explore the whole
-                                collection of open-source web components and elements built with the utility classes
-                                from
-                                Tailwind</p>
+                            <p class="font-light text-gray-500 lg:mb-16 sm:text-xl dark:text-gray-400">Dazzling diamonds and vibrant gemstones. Explore our gallery for a stunning collection of precious stones and exquisite diamond jewelry</p>
                         </div>
 
 
@@ -175,7 +163,7 @@
                                     <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
                                         <a href="#">Bonnie Green</a>
                                     </h3>
-                                    <span class="text-gray-500 dark:text-gray-400">CEO & Web Developer</span>
+                                    <!-- <span class="text-gray-500 dark:text-gray-400">CEO & Web Developer</span> -->
                                     <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Bonnie drives the
                                         technical
                                         strategy of the flowbite platform and brand.</p>
@@ -229,7 +217,7 @@
                                     <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
                                         <a href="#">Jese Leos</a>
                                     </h3>
-                                    <span class="text-gray-500 dark:text-gray-400">CTO</span>
+                                    <!-- <span class="text-gray-500 dark:text-gray-400">CTO</span> -->
                                     <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Jese drives the
                                         technical
                                         strategy of the flowbite platform and brand.</p>
@@ -283,7 +271,7 @@
                                     <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
                                         <a href="#">Michael Gough</a>
                                     </h3>
-                                    <span class="text-gray-500 dark:text-gray-400">Senior Front-end Developer</span>
+                                    <!-- <span class="text-gray-500 dark:text-gray-400">Senior Front-end Developer</span> -->
                                     <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Michael drives the
                                         technical strategy of the flowbite platform and brand.</p>
                                     <!-- <ul class="flex space-x-4 sm:mt-0">
@@ -336,7 +324,7 @@
                                     <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
                                         <a href="#">Lana Byrd</a>
                                     </h3>
-                                    <span class="text-gray-500 dark:text-gray-400">Marketing & Sale</span>
+                                    <!-- <span class="text-gray-500 dark:text-gray-400">Marketing & Sale</span> -->
                                     <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Lana drives the
                                         technical
                                         strategy of the flowbite platform and brand.</p>
